# nanotekspice

./: .gitignore  Makefile  flake.nix
include/: AComponent.hpp  Circuit.hpp  Exceptions.hpp  Factory.hpp  Parser.hpp  Shell.hpp  tekspice.hpp
include/Components/Advanced/: 4008.hpp  4013.hpp  4017.hpp  4040.hpp  4094.hpp  4512.hpp  4514.hpp  logger.hpp
include/Components/Elementary/: AndComponent.hpp  NandComponent.hpp  NorComponent.hpp  NotComponent.hpp  OrComponent.hpp  XorComponent.hpp
include/Components/Gates/: 4001.hpp  4011.hpp  4030.hpp  4069.hpp  4071.hpp  4081.hpp
include/Components/Specials/: Clock.hpp  False.hpp  Input.hpp  Output.hpp  True.hpp
include/component/: AndComponent.hpp
src/: AComponent.cpp  Circuit.cpp  Exceptions.cpp  Factory.cpp  Parser.cpp  Shell.cpp  main.cpp  tekspice.cpp
src/Components/: TristatesOperators.cpp
src/Components/Advanced/: 4008.cpp  4013.cpp  4017.cpp  4040.cpp  4094.cpp  4512.cpp  4514.cpp  logger.cpp
src/Components/Elementary/: AndComponent.cpp  NandComponent.cpp  NorComponent.cpp  NotComponent.cpp  OrComponent.cpp  XorComponent.cpp
src/Components/Gates/: 4001.cpp  4011.cpp  4030.cpp  4069.cpp  4071.cpp  4081.cpp
src/Components/Specials/: Clock.cpp  False.cpp  Input.cpp  Output.cpp  True.cpp
tests/: CMakeLists.txt  test_advanced.cpp  test_gates.cpp  test_tekspice.cpp
